Fix bug when destroying the perfect-scrollbar, change passed/failed colors, change words in views

--- a/app/javascript/stylesheets/components/challenge_preview.scss
+++ b/app/javascript/stylesheets/components/challenge_preview.scss
@@ -3,6 +3,7 @@
 	background-color: #242626;
 	padding: 10px 15px;
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  transition: all 0.3s ease 0s;
 
 	&:hover {
 		background-color: $light-body-bg-color;
