--- a/app/javascript/stylesheets/variables/variables.scss
+++ b/app/javascript/stylesheets/variables/variables.scss
@@ -5,8 +5,8 @@ $atom-bg-color: #282C34;
 $primary-color: #00D4B1;
 $tab-hover-bg-color: #28b9d2;
 
-$passed-color: #3A7447;
-$failed-color: #994D4D;
+$passed-color: #60AE73;
+$failed-color: #E06C75;
 
 // $preview-bg: #2C2F37;
 $preview-bg: #24282A;
